update pre pair exercises

--- a/Sentencias de control.ipynb
+++ b/Sentencias de control.ipynb
@@ -262,25 +262,64 @@
     "# Preguntar al usuario su estado civil, permitiendo dos opciones: \"soltero\" (S) o \"casado\" (C).\n",
     "\n",
     "# Calcular el impuesto sobre la renta utilizando las siguientes reglas:\n",
+    "\n",
     "# Si el estado civil es \"soltero\" (S):\n",
-    "# Si el ingreso anual es menor o igual a $9,875, el impuesto es el 10% del ingreso anual.\n",
-    "# Si el ingreso anual está entre $9,876 y $40,125, el impuesto es el 10% de los primeros $9,875 más el 12% de la cantidad que excede los $9,875.\n",
+    "    # Si el ingreso anual es menor o igual a $9,875, el impuesto es el 10% del ingreso anual.\n",
+    "    # Si el ingreso anual está entre $9,876 y $40,125, el impuesto es el 10% de los primeros $9,875 más el 12% de la cantidad que excede los $9,875.\n",
+    "\n",
     "# Si el estado civil es \"casado\" (C):\n",
-    "# Si el ingreso anual es menor o igual a $19,850, el impuesto es el 10% del ingreso anual.\n",
-    "# Si el ingreso anual está entre $19,851 y $80,250, el impuesto es el 10% de los primeros $19,850 más el 12% de la cantidad que excede los $19,850.\n",
+    "    # Si el ingreso anual es menor o igual a $19,850, el impuesto es el 10% del ingreso anual.\n",
+    "    # Si el ingreso anual está entre $19,851 y $80,250, el impuesto es el 10% de los primeros $19,850 más el 12% de la cantidad que excede los $19,850.\n",
     "\n",
     "ingreso_anual = int(input('Dime tus ingresos anuales'))\n",
-    "estado_civil = input('¿Cuál es tu estado civil?')\n",
-    "\n"
+    "estado_civil = input('¿Cuál es tu estado civil? ¿Soltero(S) o casado(C)?')\n",
+    "\n",
+    "if estado_civil = 'S':\n",
+    "    \n",
+    "\n",
+    "\n",
+    "if soltero and ingreso_anual <= 9875:\n",
+    "    print(f\"El impuesto es{(ingreso_anual * 10) / 100}\")\n",
+    "\n",
+    "\n",
+    "if estado_civil == soltero and ingreso_anual <= 9875:\n",
+    "    print(f\"El impuesto es{(ingreso_anual * 10) / 100}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "622ed14c",
+   "id": "5c40cd22",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Solicitar ingreso anual al usuario\n",
+    "ingreso = float(input(\"Ingrese su ingreso anual en dólares: \"))\n",
+    "\n",
+    "# Preguntar estado civil\n",
+    "estado_civil = input(\"Ingrese su estado civil ('S' para soltero, 'C' para casado): \").strip().upper()\n",
+    "\n",
+    "impuesto = 0\n",
+    "\n",
+    "if estado_civil == 'S':\n",
+    "    if ingreso <= 9875:\n",
+    "        impuesto = ingreso * 0.10\n",
+    "    elif ingreso <= 40125:\n",
+    "        impuesto = 9875 * 0.10 + (ingreso - 9875) * 0.12\n",
+    "    else:\n",
+    "        print(\"Este programa solo cubre ingresos hasta $40,125 para solteros.\")\n",
+    "elif estado_civil == 'C':\n",
+    "    if ingreso <= 19850:\n",
+    "        impuesto = ingreso * 0.10\n",
+    "    elif ingreso <= 80250:\n",
+    "        impuesto = 19850 * 0.10 + (ingreso - 19850) * 0.12\n",
+    "    else:\n",
+    "        print(\"Este programa solo cubre ingresos hasta $80,250 para casados.\")\n",
+    "else:\n",
+    "    print(\"Estado civil no válido. Use 'S' o 'C'.\")\n",
+    "\n",
+    "# Mostrar resultado si se calculó"
+   ]
   }
  ],
  "metadata": {
